--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.24.0",
     "firebase": "^9.0.2",
+    "material-ui": "^0.20.2",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^3.3.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
