--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-places-autocomplete": "^3.3.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
